# chat-bot-omnichat

./: README.md  bot.py  classes.pkl  config.py  intents.json  local.env  model.h5  pyproject.toml  train.py  variable.py  words.pkl
handlers/: extract.py  questions.py
